--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -24,6 +24,8 @@ Text goes here. Place your data in the /data folder, and add dimensions and code
 # Code goes here
 # Read in your data file
 # Print the output of glimpse() or skim()
+squirrel <- read_csv("../data/squirrel-data.csv")
+
 ```
 
 ## 3. Data analysis plan
