--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -1,12 +1,14 @@
 ---
 title: "Project proposal"
-author: "Team name"
+author: "TDCJ"
 output: github_document
 ---
 
 ```{r load-packages, message = FALSE}
 library(tidyverse)
 library(broom)
+library(readxl)
+Central_Park_Squirrel_Census <- read_excel(2018_Central_Park_Squirrel_-Squirrel_Data.CSV)
 ## Add any additional packages you are using here
 ```
 
