--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -25,9 +25,8 @@ The dataset contains `r nrow(squirrels)` observations and `r ncol(squirrels)` va
 Text goes here. Place your data in the /data folder, and add dimensions and codebook to the README in that folder. Then print out the output of glimpse() or skim() of your data frame.
 
 ```{r}
-# Code goes here
-# Read in your data file
-# Print the output of glimpse() or skim()
+squirrels <- read_csv("2018_Central_Park_Squirrel_Census_-_Squirrel_Data.csv")
+glimpse(squirrels)
 ```
 
 ## 3. Data analysis plan
