--- a/memo/memo.Rmd
+++ b/memo/memo.Rmd
@@ -9,6 +9,11 @@ This document should contain a detailed account of the data clean up for your da
 ```{r load-packages, message = FALSE}
 library(tidyverse)
 library(broom)
+library(readxl)
+library(leaflet)
+
+squirrels <- read_csv("../data/2018_Central_Park_Squirrel_Census_-_Squirrel_Data.csv")
+
 ```
 
 ## Data Clean Up Steps for Overall Data
@@ -22,6 +27,29 @@ library(broom)
 ### Step 2: ________
 
 ## Plots
+```{r leaflet-map}
+
+squirrels <- squirrels |>
+  mutate(lng = substring(`Lat/Long`, 8, 22),
+         lat = substring(`Lat/Long`, 26, 40))
+
+squirrels$lng <- as.numeric(squirrels$lng)
+squirrels$lat <- as.numeric(squirrels$lat)
+
+leaflet(squirrels) |>
+  addTiles() |>
+  setView(lng = -73.9651,
+          lat = 40.7833,
+          zoom = 13) |>
+  addCircleMarkers(lat = ~lat, 
+             lng = ~lng, 
+             clusterOptions = markerClusterOptions(),
+             color = squirrels$`Primary Fur Color`,
+             fillColor = squirrels$`Primary Fur Color`,
+             popup = squirrels$`Unique Squirrel ID`)
+
+```
+
 
 ### ggsave example for saving plots
 
