--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -27,8 +27,9 @@ The dataset contains `r nrow(squirrels)` observations and `r ncol(squirrels)` va
 Text goes here. Place your data in the /data folder, and add dimensions and codebook to the README in that folder. Then print out the output of glimpse() or skim() of your data frame.
 
 ```{r}
-squirrels <- read_csv("2018_Central_Park_Squirrel_Census_-_Squirrel_Data.csv")
-glimpse(squirrels)
+X2018_Central_Park_Squirrel_Census_Squirrel_Data_1_ <- read_csv("proposal/2018_Central_Park_Squirrel_Census_-_Squirrel_Data (1).csv")
+
+
 ```
 
 ## 3. Data analysis plan
@@ -40,9 +41,5 @@ Text goes here.
 - The data visualization(s) that you believe will be useful in exploring your question(s). (You can update these later as you work on your project.)
 
 
-```{r}
-# Code goes here
-# Code to calculate summary statistics
-# Code for a visualization
-```
->>>>>>> d74e7d38294dc87f12e2963f8f2adfce5dd744c9
+
+
