--- a/memo/memo.Rmd
+++ b/memo/memo.Rmd
@@ -32,7 +32,7 @@ my_colors <- brewer.pal(n = 4, name = "Paired")
 
 
 
-## Leaflet Map:
+### Final Plot 1 - Leaflet Map:
 
 To build the leaflet map, the first step was to create separate variables for
 the latitude and longitude, as both were combined in the original dataset. This was the most intensive data cleaning necessary for the project. The code then generates the base OpenStreetMap layer, as well as grouped circle markers for each squirrel.
@@ -64,7 +64,7 @@ saveWidget(squirrels_map, file = "index.html", selfcontained = TRUE)
 
 
 
-### Final Plot 1:
+### Final Plot 2:
 
 
 ```{r squirrel-activities}
@@ -104,7 +104,7 @@ ggplot(activities, aes(x = reorder(Activity, -Total_Frequency),
 ```
 
 
-#### Final Plot 2
+#### Final Plot 3
 
 ```{r squirrel-human-behavior}
 
