Updating memo.md

--- a/memo/memo.Rmd
+++ b/memo/memo.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Project memo"
-author: "Team name"
+title: "Analyzing squirrel behavior in Central Park"
+author: "Cate, Dillon"
 output: github_document
 always_allow_html: true
 ---
