--- a/memo/memo.Rmd
+++ b/memo/memo.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Analyzing squirrel behavior in Central Park"
-author: "Cate, Dillon"
+author: "Cate, Dillon, Tomas"
 output: github_document
 always_allow_html: true
 ---
